--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,13 @@ dependencies:
 
   sqflite_common_ffi: ^2.3.4+1
 
+  country_state_city_picker: ^1.2.8
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
