--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
 
   country_state_city_picker: ^1.2.8
 
+  animate_do: ^4.2.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
