--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
 
   provider: ^6.1.5
 
-  go_router: ^15.1.2
+  go_router: ^15.1.3
 
   sqflite: ^2.4.0
   path_provider: ^2.1.5
@@ -29,6 +29,7 @@ dependencies:
   intl: ^0.20.2
 
   gantt_view: ^0.1.4
+  sqflite_common_ffi_web: ^1.0.0
 
 dev_dependencies:
   flutter_test:
