--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
 
   gantt_view: ^0.1.4
   sqflite_common_ffi_web: ^1.0.0
+  collection: ^1.18.0 # Or latest version
 
 dev_dependencies:
   flutter_test:
