--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   sqflite_common_ffi_web: ^1.0.0
   collection: ^1.18.0
   time_tracker: ^1.1.0
+  csv: ^6.0.0
 
 dev_dependencies:
   flutter_test:
